# AoC-2023

./: AoC2023.cabal  README.md
1/: main.hs
2/: main.hs
3/: main.hs
app/: Main.hs
inputs/: Day02.txt
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day2.hs  Day3.hs  Lib.hs
