cabal-version:      2.4
name:               AoC2023
version:            0.1.0.0
synopsis:            My solutions for Advent of Code 2023

-- A longer description of the package.
-- description:
homepage:           https://github.com/shiva-tk/AoC-2023

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Shiva Tamil Kumaran
maintainer:         anand.tk.03@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  
      Day01, 
      Day02, 
      Day03, 
      Day04,
      Lib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.4.0, 
      array,
      containers,
      parsec

    hs-source-dirs:   src
    default-language: Haskell2010

executable AoC2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        AoC2023

    hs-source-dirs:   app
    default-language: Haskell2010
